--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "dependencies": {
     "ember": "~2.7.0",
     "ember-cli-shims": "0.1.1",
-    "ember-qunit-notifications": "0.1.0",
-    "foundation-sites": "^6.2.1"
+    "foundation-sites": "^6.2.1",
+    "mocha": "~2.2.4",
+    "chai": "~2.3.0",
+    "ember-mocha-adapter": "~0.3.1"
   }
 }
