--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - "bower install"
 
 script:
-  - "COVERAGE=true npm test"
+  - "npm test"
 
 after_script:
   - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
