--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-clean-css": "^1.1.0",
+    "coveralls": "^2.11.12",
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.7.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-code-coverage": "0.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-eslint": "1.8.0",
     "ember-cli-foundation-6-sass": "0.0.13",
