--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,4 @@ script:
 
 after_script:
   - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+  - "cat coverage/lcov.info | node_modules/codeclimate-test-reporter/bin/codeclimate.js"
