--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-clean-css": "^1.1.0",
+    "codeclimate-test-reporter": "^0.3.3",
     "coveralls": "^2.11.12",
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.7.0",
