--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">= 0.10.0"
   },
   "author": "",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-clean-css": "^1.1.0",
