--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-mirage": "0.2.1",
     "ember-cli-mocha": "0.10.4",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.5.1",
