--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ember-lodash": "0.0.10",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
+    "liquid-fire": "0.25.0",
     "loader.js": "^4.0.1",
     "postcss-scss": "^0.3.0"
   }
