--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-babel": "^5.1.6",
     "ember-cli-code-coverage": "0.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-emblem": "0.8.2-beta.2",
     "ember-cli-eslint": "3.0.0",
     "ember-cli-foundation-6-sass": "0.0.13",
     "ember-cli-htmlbars": "^1.0.3",
