--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
   "name": "ontohub-frontend",
   "dependencies": {
-    "ember": "~2.8.0",
-    "ember-cli-shims": "0.1.1",
-    "foundation-sites": "^6.2.1",
-    "mocha": "~2.2.4",
-    "chai": "~2.3.0",
-    "ember-mocha-adapter": "~0.3.1",
-    "yadda": "acuminous/yadda#^0.18.0",
-    "pretender": "~1.1.0",
-    "Faker": "~3.1.0"
+    "ember": "^2.9.1",
+    "ember-cli-shims": "^0.1.3",
+    "foundation-sites": "^6.2.4",
+    "mocha": "^3.1.2",
+    "chai": "^3.5.0",
+    "ember-mocha-adapter": "^0.3.1",
+    "yadda": "^0.22.1",
+    "pretender": "^1.4.1",
+    "Faker": "~3.1.0",
+    "faker": "Faker#^3.1.0"
   }
 }
