--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember test"
+    "test": "ember test",
+    "update": "npm-check-updates"
   },
   "repository": "",
   "engines": {
@@ -55,5 +56,6 @@
     "postcss-scss": "^0.4.0"
   },
   "devDependencies": {
+    "npm-check-updates": "^2.8.6"
   }
 }
