--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-lodash": "0.0.11",
+    "ember-page-title": "3.0.10",
     "ember-resolver": "^2.0.3",
     "liquid-fire": "0.26.4",
     "loader.js": "^4.0.1",
