--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
   "name": "ontohub-frontend",
   "dependencies": {
+    "chai": "^3.5.0",
     "ember": "^2.9.1",
     "ember-cli-shims": "^0.1.3",
+    "ember-mocha-adapter": "^0.3.1",
+    "faker": "Faker#^3.1.0",
     "foundation-sites": "^6.2.4",
     "mocha": "^3.1.2",
-    "chai": "^3.5.0",
-    "ember-mocha-adapter": "^0.3.1",
-    "yadda": "^0.22.1",
     "pretender": "^1.4.1",
-    "faker": "Faker#^3.1.0"
+    "yadda": "^0.22.1"
   }
 }
