--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "ember build",
     "start": "ember server",
     "test": "ember test",
-    "update": "npm-check-updates"
+    "check-upgrade": "npm-check-updates",
+    "upgrade": "npm-check-updates -u"
   },
   "repository": "",
   "engines": {
@@ -19,7 +20,7 @@
   },
   "author": "",
   "license": "AGPL-3.0",
-  "dependencies": {
+  "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-clean-css": "^1.1.0",
     "codeclimate-test-reporter": "^0.4.0",
@@ -36,15 +37,15 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-mirage": "0.2.3",
-    "ember-cli-mocha": "0.10.4",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-mirage": "0.2.4",
+    "ember-cli-mocha": "0.11.0",
+    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^5.5.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-yadda": "0.0.6",
-    "ember-css-modules": "0.5.0",
+    "ember-css-modules": "0.6.0",
     "ember-data": "^2.7.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
@@ -53,9 +54,7 @@
     "ember-resolver": "^2.0.3",
     "liquid-fire": "0.26.4",
     "loader.js": "^4.0.1",
+    "npm-check-updates": "^2.8.6",
     "postcss-scss": "^0.4.0"
-  },
-  "devDependencies": {
-    "npm-check-updates": "^2.8.6"
   }
 }
