Update deps and use yarn instead of npm (#29)
* Update deps and use yarn instead of npm

* Use yarn on travis

* Revert "Update dependency badge (#20)"

This reverts commit edff750ebc5855bfd234e8ff6b4eaec285ef56bd.

* Use patch version wildcard instead of minor

* Update some more

* Make travis cache the yarn cache dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
 
 cache:
   directories:
-    - node_modules
+    - "/home/travis/.yarn-cache"
     - bower_components
 
 before_install:
@@ -17,7 +17,8 @@ before_install:
   - "phantomjs --version"
 
 install:
-  - "npm install"
+  - "npm install -g yarn bower"
+  - "yarn install --pure-lockfile --no-emoji"
   - "bower install"
 
 script:
