--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "loader.js": "~4.0.1",
     "npm-check-updates": "~2.8.6",
     "postcss-scss": "~0.4.0"
+  },
+  "dependencies": {
+    "ember-font-awesome": "^2.2.0"
   }
 }
