--- a/package.json
+++ b/package.json
@@ -51,10 +51,14 @@
     "ember-load-initializers": "~0.5.1",
     "ember-lodash": "0.0.11",
     "ember-page-title": "3.0.10",
+    "ember-radio-button": "1.0.7",
     "ember-resolver": "~2.1.0",
     "liquid-fire": "0.26.4",
     "loader.js": "~4.0.1",
     "npm-check-updates": "~2.8.6",
     "postcss-scss": "~0.4.0"
+  },
+  "dependencies": {
+    "ember-font-awesome": "^2.2.0"
   }
 }
