--- a/package.json
+++ b/package.json
@@ -26,35 +26,35 @@
     "codeclimate-test-reporter": "~0.4.0",
     "coveralls": "~2.11.12",
     "ember-ajax": "~2.5.2",
-    "ember-cli": "2.10.0",
+    "ember-cli": "2.10.1",
     "ember-cli-app-version": "~2.0.0",
-    "ember-cli-babel": "~5.1.6",
+    "ember-cli-babel": "5.2.1",
     "ember-cli-code-coverage": "0.2.2",
     "ember-cli-dependency-checker": "~1.3.0",
     "ember-cli-emblem": "0.8.2-beta.2",
-    "ember-cli-eslint": "3.0.0",
+    "ember-cli-eslint": "3.0.2",
     "ember-cli-foundation-6-sass": "0.0.13",
     "ember-cli-htmlbars": "~1.1.0",
     "ember-cli-htmlbars-inline-precompile": "~0.3.1",
-    "ember-cli-inject-live-reload": "~1.4.0",
+    "ember-cli-inject-live-reload": "1.6.1",
     "ember-cli-mirage": "0.2.4",
     "ember-cli-mocha": "0.11.0",
     "ember-cli-release": "~1.0.0-beta.2",
-    "ember-cli-sass": "~5.6.0",
+    "ember-cli-sass": "6.1.1",
     "ember-cli-sri": "~2.1.0",
     "ember-cli-test-loader": "~1.1.0",
     "ember-cli-uglify": "~1.2.0",
     "ember-cli-yadda": "0.0.6",
-    "ember-css-modules": "0.6.0",
-    "ember-data": "~2.10.0",
+    "ember-css-modules": "0.6.4",
+    "ember-data": "2.11.0",
     "ember-export-application-global": "~1.1.1",
-    "ember-load-initializers": "~0.5.1",
-    "ember-lodash": "0.0.11",
-    "ember-page-title": "3.0.10",
-    "ember-radio-button": "1.0.7",
+    "ember-load-initializers": "0.6.3",
+    "ember-lodash": "4.17.0",
+    "ember-page-title": "3.1.5",
+    "ember-radio-button": "1.1.1",
     "ember-resolver": "~2.1.0",
-    "liquid-fire": "0.26.4",
-    "loader.js": "~4.0.1",
+    "liquid-fire": "0.27.0",
+    "loader.js": "4.1.0",
     "npm-check-updates": "~2.8.6",
     "postcss-scss": "~0.4.0"
   },
