--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli": "2.10.1",
     "ember-cli-app-version": "~2.0.0",
     "ember-cli-babel": "5.2.1",
+    "ember-cli-chai": "^0.3.2",
     "ember-cli-code-coverage": "0.2.2",
     "ember-cli-dependency-checker": "~1.3.0",
     "ember-cli-emblem": "0.8.2-beta.2",
@@ -38,7 +39,7 @@
     "ember-cli-htmlbars-inline-precompile": "~0.3.1",
     "ember-cli-inject-live-reload": "1.6.1",
     "ember-cli-mirage": "0.2.4",
-    "ember-cli-mocha": "0.11.0",
+    "ember-cli-mocha": "0.13.1",
     "ember-cli-release": "~1.0.0-beta.2",
     "ember-cli-sass": "6.1.1",
     "ember-cli-sri": "~2.1.0",
