--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,11 @@
   },
   extends: 'eslint:recommended',
   env: {
-    'browser': true
+    'browser': true,
+    'mocha': true
+  },
+  globals: {
+    "server": true
   },
   rules: {
     "no-eval": ["error"],
