--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
     "font-awesome": "~4.5.0",
     "foundation-sites": "~6.2.4",
     "mocha": "^3.1.2",
-    "pretender": "^1.4.1",
-    "yadda": "^0.22.1"
+    "pretender": "^1.4.1"
   }
 }
