--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "codeclimate-test-reporter": "~0.4.0",
     "coveralls": "~2.11.12",
     "ember-ajax": "~2.5.2",
+    "ember-browserify": "1.1.13",
     "ember-cli": "2.10.1",
     "ember-cli-app-version": "~2.0.0",
     "ember-cli-babel": "5.2.1",
@@ -45,7 +46,7 @@
     "ember-cli-sri": "~2.1.0",
     "ember-cli-test-loader": "~1.1.0",
     "ember-cli-uglify": "~1.2.0",
-    "ember-cli-yadda": "0.0.6",
+    "ember-cli-yadda": "0.2.1",
     "ember-css-modules": "0.6.4",
     "ember-data": "2.11.0",
     "ember-export-application-global": "~1.1.1",
