--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "ember-cli-shims": "^0.1.3",
     "ember-mocha-adapter": "^0.3.1",
     "faker": "Faker#^3.1.0",
-    "font-awesome": "~4.5.0",
+    "font-awesome": "4.7.0",
     "foundation-sites": "6.3.0",
     "mocha": "^3.1.2",
     "pretender": "^1.4.1"
