--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-browserify": "1.1.13",
     "ember-cli": "2.10.1",
     "ember-cli-app-version": "~2.0.0",
+    "ember-cli-autoprefixer": "0.6.0",
     "ember-cli-babel": "5.2.1",
     "ember-cli-chai": "^0.3.2",
     "ember-cli-code-coverage": "0.3.11",
@@ -51,6 +52,7 @@
     "ember-data": "2.11.0",
     "ember-export-application-global": "~1.1.1",
     "ember-font-awesome": "~2.2.0",
+    "ember-link-action": "0.0.35",
     "ember-load-initializers": "0.6.3",
     "ember-lodash": "4.17.0",
     "ember-page-title": "3.1.5",
