--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-cli-htmlbars": "^1.2.0",
     "ember-cli-htmlbars-inline-precompile": "~0.3.1",
     "ember-cli-inject-live-reload": "1.6.1",
+    "ember-cli-json-module": "0.0.3",
     "ember-cli-mirage": "^0.3.1",
     "ember-cli-mocha": "^0.13.2",
     "ember-cli-release": "~1.0.0-beta.2",
@@ -53,6 +54,7 @@
     "ember-data": "^2.12.1",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.0.5",
+    "ember-json-schema": "git+https://github.com/eugenk/ember-json-schema.git#adjust_to_jsonapi",
     "ember-link-action": "0.0.35",
     "ember-load-initializers": "^1.0.0",
     "ember-lodash": "^4.17.2",
@@ -61,6 +63,7 @@
     "ember-resolver": "^4.1.0",
     "ember-simple-auth": "^1.2.2",
     "ember-simple-auth-token": "2.1.0",
+    "json-schema-loader": "1.0.0",
     "liquid-fire": "^0.27.2",
     "loader.js": "^4.2.3",
     "npm-check-updates": "^2.10.5",
