--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "ember-page-title": "3.1.5",
     "ember-radio-button": "1.1.1",
     "ember-resolver": "~2.1.0",
+    "ember-simple-auth": "1.2.0",
+    "ember-simple-auth-token": "2.1.0",
     "liquid-fire": "0.27.0",
     "loader.js": "4.1.0",
     "npm-check-updates": "~2.8.6",
