Sort eslint rules, one-var, fix indent.

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,24 +13,25 @@
     "server": true
   },
   rules: {
-    "no-eval": ["error"],
-    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
-    "func-style": ["error", "declaration", { "allowArrowFunctions": true }],
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
-    "max-len": ["warn", 80],
-    "no-mixed-spaces-and-tabs": ["error"],
-    "no-trailing-spaces": ["error"],
-    "object-curly-spacing": ["error", "always"],
-    "semi-spacing": ["error"],
     "arrow-body-style": ["error"],
     "arrow-parens": ["warn", "always"],
     "arrow-spacing": ["error"],
+    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+    "func-style": ["error", "declaration", { "allowArrowFunctions": true }],
+    "indent": ["error", 2, { "VariableDeclarator": { "var": 2, "let": 2, "const": 3 } }],
+    "linebreak-style": ["error", "unix"],
+    "max-len": ["warn", 80],
     "no-confusing-arrow": ["warn"],
     "no-const-assign": ["error"],
+    "no-eval": ["error"],
+    "no-mixed-spaces-and-tabs": ["error"],
+    "no-trailing-spaces": ["error"],
     "no-var": ["error"],
+    "object-curly-spacing": ["error", "always"],
+    "one-var": ["error", "always"],
     "prefer-arrow-callback": ["warn", { "allowNamedFunctions": true }],
     "prefer-rest-params": ["error"],
+    "semi-spacing": ["error"],
     "template-curly-spacing": ["error"]
   }
 }
