Clone backend and link schemas in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ install:
   - "npm install -g yarn bower"
   - "yarn install --pure-lockfile --no-emoji"
   - "bower install"
+  - "git clone https://github.com/ontohub/ontohub-backend ../ontohub-backend"
+  - "ln -s ../ontohub-backend/spec/support/api/schemas app/schemas"
 
 script:
   - "npm test"
