Remove rest of npm from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ cache:
     - "/home/travis/.yarn-cache"
 
 before_install:
-  - "npm config set spin false"
-  - "npm --version"
+  - "yarn --version"
   - "phantomjs --version"
   - "git clone https://github.com/ontohub/ontohub-backend ../ontohub-backend"
   - "ln -s $(readlink -f ../ontohub-backend/spec/support/api/schemas) app/schemas"
@@ -22,7 +21,7 @@ install:
   - "yarn run bower install"
 
 script:
-  - "npm test"
+  - "yarn test"
 
 after_script:
   - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
