Write Acceptance tests (#62)
* First commit - WIP.

* Generate models from schema

* Update mirage models and factories

* Model unit tests and acceptance tests

* Rework repository association

* Make tests work

* Lock yadda version to avoid bug

See https://github.com/curit/ember-cli-yadda/issues/44

* Clone backend and link schemas in travis

* Correct link

* Remove unneded installs

* Add test global functions

* Remove commented code

* Ignore schemas folder/link

* Remove rest of npm from travis

* Fix some repository-related issues

* Fix profile link

* Get repository create route working

* Remove console.logs

* Format eslintrc as valid JSON and add Ember test helper globals

* Repository create test

* Fix repository update handler

* More repository tests

* Remove yadda

* Create new acceptance tests

* Add organization page tests

* Prepare new repository page tests

* Create new repository page tests

* Search result tests

* Complete acceptance tests

* Obey lint

* Remove fixtures and rest of yadda

* Fix problem with repository relationship

* Obey reviewer

* Move sign in to test helper

* Lowercase test descriptions

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,18 @@ cache:
     - "/home/travis/.yarn-cache"
 
 before_install:
-  - "npm config set spin false"
-  - "npm --version"
+  - "yarn --version"
   - "phantomjs --version"
+  - "git clone https://github.com/ontohub/ontohub-backend ../ontohub-backend"
+  - "ln -s $(readlink -f ../ontohub-backend/spec/support/api/schemas) app/schemas"
+  - "ls -la app/schemas"
 
 install:
-  - "npm install -g yarn bower"
   - "yarn install --pure-lockfile --no-emoji"
-  - "bower install"
+  - "yarn run bower install"
 
 script:
-  - "npm test"
+  - "yarn test"
 
 after_script:
   - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
