--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "prefer-rest-params": ["error"],
     "semi": ["warn", "never"],
     "semi-spacing": ["error"],
-    "template-curly-spacing": ["error"]
+    "template-curly-spacing": ["error"],
+    "quotes": ["warn", "single", { "avoidEscape": true }]
   }
 }
