--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /node_modules
 /bower_components
 
+# local configuration
+.ember-cli
+
 # misc
 /.sass-cache
 /connect.lock
@@ -15,4 +18,6 @@ npm-debug.log
 testem.log
 /app/schemas
 .vscode
+typings
+jsconfig.json
 testem.local.js
