--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,9 @@
     "one-var": ["error", "always"],
     "prefer-arrow-callback": ["warn", { "allowNamedFunctions": true }],
     "prefer-rest-params": ["error"],
+    "semi": ["warn", "never"],
     "semi-spacing": ["error"],
-    "template-curly-spacing": ["error"]
+    "template-curly-spacing": ["error"],
+    "quotes": ["warn", "single", { "avoidEscape": true }]
   }
 }
