--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "broccoli-clean-css": "^2.0.1",
     "coveralls": "^2.13.1",
     "ember-ajax": "^3.0.0",
-    "ember-browserify": "1.1.13",
     "ember-cli": "^2.13.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-autoprefixer": "^0.7.0",
@@ -39,13 +38,14 @@
     "ember-cli-foundation-6-sass": "^0.0.23",
     "ember-cli-gravatar": "^3.8.3",
     "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
     "ember-cli-inject-live-reload": "1.6.1",
     "ember-cli-json-module": "0.0.3",
     "ember-cli-mirage": "^0.3.1",
     "ember-cli-mocha": "^0.14.3",
     "ember-cli-release": "~1.0.0-beta.2",
     "ember-cli-sass": "^6.1.3",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "~2.1.0",
     "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify": "~1.2.0",
@@ -62,6 +62,7 @@
     "ember-resolver": "^4.1.0",
     "ember-simple-auth": "^1.3.0",
     "ember-simple-auth-token": "2.1.0",
+    "ember-source": "~2.13.0",
     "json-schema-loader": "1.0.0",
     "liquid-fire": "^0.27.3",
     "loader.js": "^4.4.0",
