--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "broccoli-clean-css": "^2.0.1",
     "coveralls": "^2.13.1",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^2.13.1",
+    "ember-cli": "^2.13.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-autoprefixer": "^0.7.0",
     "ember-cli-babel": "^6.1.0",
@@ -56,13 +56,13 @@
     "ember-json-schema": "git+https://github.com/ontohub/ember-json-schema.git#adjust_to_jsonapi",
     "ember-link-action": "0.0.35",
     "ember-load-initializers": "^1.0.0",
-    "ember-lodash": "^4.17.2",
+    "ember-lodash": "^4.17.3",
     "ember-page-title": "^3.1.6",
     "ember-radio-button": "1.1.1",
     "ember-resolver": "^4.1.0",
     "ember-simple-auth": "^1.3.0",
     "ember-simple-auth-token": "2.1.0",
-    "ember-source": "~2.13.0",
+    "ember-source": "^2.13.2",
     "json-schema-loader": "1.0.0",
     "liquid-fire": "^0.27.3",
     "loader.js": "^4.4.0",
