--- a/package.json
+++ b/package.json
@@ -24,49 +24,49 @@
   "devDependencies": {
     "broccoli-asset-rev": "~2.5.0",
     "broccoli-clean-css": "^2.0.1",
-    "coveralls": "^2.13.0",
-    "ember-ajax": "^2.5.6",
-    "ember-browserify": "1.1.13",
-    "ember-cli": "^2.12.1",
+    "coveralls": "^2.13.1",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "^2.13.2",
     "ember-cli-app-version": "^3.0.0",
-    "ember-cli-autoprefixer": "0.6.0",
-    "ember-cli-babel": "^5.2.4",
-    "ember-cli-chai": "^0.3.2",
-    "ember-cli-code-coverage": "0.3.11",
-    "ember-cli-dependency-checker": "~1.3.0",
-    "ember-cli-emblem": "0.8.2-beta.2",
-    "ember-cli-eslint": "^3.0.3",
-    "ember-cli-foundation-6-sass": "^0.0.20",
-    "ember-cli-gravatar": "^3.8.1",
-    "ember-cli-htmlbars": "^1.2.0",
-    "ember-cli-htmlbars-inline-precompile": "~0.3.1",
+    "ember-cli-autoprefixer": "^0.7.0",
+    "ember-cli-babel": "^6.1.0",
+    "ember-cli-chai": "^0.4.1",
+    "ember-cli-code-coverage": "^0.3.12",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-emblem": "^0.9.0",
+    "ember-cli-eslint": "^3.1.0",
+    "ember-cli-foundation-6-sass": "^0.0.23",
+    "ember-cli-gravatar": "^3.8.3",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
     "ember-cli-inject-live-reload": "1.6.1",
     "ember-cli-json-module": "0.0.3",
     "ember-cli-mirage": "^0.3.1",
-    "ember-cli-mocha": "^0.13.2",
+    "ember-cli-mocha": "^0.14.3",
     "ember-cli-release": "~1.0.0-beta.2",
-    "ember-cli-sass": "~6.1.2",
+    "ember-cli-sass": "^6.1.3",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "~2.1.0",
     "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify": "~1.2.0",
     "ember-css-modules": "^0.6.5",
-    "ember-data": "^2.12.1",
+    "ember-data": "^2.13.1",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.0.5",
-    "ember-json-schema": "git+https://github.com/eugenk/ember-json-schema.git#adjust_to_jsonapi",
+    "ember-json-schema": "git+https://github.com/ontohub/ember-json-schema.git#adjust_to_jsonapi",
     "ember-link-action": "0.0.35",
     "ember-load-initializers": "^1.0.0",
-    "ember-lodash": "^4.17.2",
-    "ember-page-title": "3.1.5",
+    "ember-lodash": "^4.17.3",
+    "ember-page-title": "^3.1.6",
     "ember-radio-button": "1.1.1",
     "ember-resolver": "^4.1.0",
-    "ember-simple-auth": "^1.2.2",
+    "ember-simple-auth": "^1.3.0",
     "ember-simple-auth-token": "2.1.0",
+    "ember-source": "^2.13.2",
     "json-schema-loader": "1.0.0",
-    "liquid-fire": "^0.27.2",
-    "loader.js": "^4.2.3",
-    "npm-check-updates": "^2.10.5",
-    "postcss-scss": "^0.4.1"
+    "liquid-fire": "^0.27.3",
+    "loader.js": "^4.4.0",
+    "postcss-scss": "^1.0.0"
   },
   "dependencies": {
     "bower": "^1.8.0"
