--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
     "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "lint": "eslint **/*.js",
     "eject": "react-scripts eject"
   }
 }
