--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,8 @@
       "**/.hg": true,
       "**/CVS": true,
       "**/.DS_Store": true,
-      "**/.vscode": true,
-      "**/node_modules": true
+      "**/node_modules": true,
+      "**/.chrome": true
     },
     "eslint.enable": true,
     "prettier.singleQuote": true,
