--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "lint": "eslint **/*.js",
+    "lint": "eslint src/**/*.js",
     "eject": "react-scripts eject"
   }
 }
