--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "codecov": "^2.2.0",
     "eslint": "^3.19.0",
     "react-scripts": "1.0.7"
   },
