--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "graphql-tag": "^2.2.1",
+    "graphql-tools": "^0.11.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-apollo": "^1.2.0",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "semantic-ui-css": "^2.2.10",
