--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "codecov": "^2.2.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
+    "prettier-eslint-cli": "^3.6.1",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4"
   },
@@ -26,6 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint src/**/*.js",
+    "format": "prettier-eslint --write \"src/**/*.js\"",
     "eject": "react-scripts eject"
   }
 }
