--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
       "**/CVS": true,
       "**/.DS_Store": true,
       "**/node_modules": true,
-      "**/.chrome": true
+      "**/.chrome": true,
+      "**/coverage": true
     },
     "eslint.enable": true,
     "prettier.singleQuote": true,
