Remove prop-types in favor of flow

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - "yarn install --pure-lockfile --no-emoji"
 
 script:
+  - "yarn flow"
   - "yarn test -- --coverage"
 
 after_script:
