--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^4.1.1",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.4",
-    "semver": "^5.3.0"
+    "semver": "^5.3.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "codecov": "^2.2.0",
