--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "license": "AGPL-3.0",
   "dependencies": {
-    "glamor": "^2.20.25",
     "graphql-tag": "^2.2.1",
     "graphql-tools": "^1.0.0",
     "react": "^15.5.4",
@@ -15,6 +14,7 @@
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.4",
     "semver": "^5.3.0",
+    "styled-components": "^2.0.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
