--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "license": "AGPL-3.0",
   "dependencies": {
-    "graphql-tag": "^2.2.1",
-    "graphql-tools": "^1.0.0",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-apollo": "^1.2.0",
     "react-dom": "^15.5.4",
