--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,21 @@
-/flow-typed/**
-/coverage/**
-/node_modules/**
+# dependencies
+/node_modules
+/flow-typed
+
+# testing
+/.chrome
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
