--- a/.eslintignore
+++ b/.eslintignore
@@ -1,21 +1,10 @@
 # dependencies
-/node_modules
-/flow-typed
+node_modules/*
+flow-typed/*
 
 # testing
-/.chrome
-/coverage
+.chrome/*
+coverage/*
 
 # production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+build/*
