--- a/.eslintignore
+++ b/.eslintignore
@@ -1,10 +1,10 @@
 # dependencies
-node_modules/*
-flow-typed/*
+node_modules/**/*
+flow-typed/**/*
 
 # testing
-.chrome/*
-coverage/*
+.chrome/**/*
+coverage/**/*
 
 # production
-build/*
+build/**/*
