Set up React basics (#89)
* Initial commit

* Add vscode settings.json

* Add eslint task and format with prettier

* Ignore node_modules in vscode

* Add vscode debug config

* Change vscode excluded files

* Add list of recommeded vscode plugins to settings.json

* Add JSON API normalization helper

* Remove unneeded files

* Add codecov

* Run tests with coverage

* Disable hound (for now)

Hound does not use all needed eslint plugins, so it fails when using jsx

* Add semantic ui

* Add react router

* Create VersionWarning component

* Add apollo

* Add VersionWarning container test

* Ignore config file for coverage

* Increase test coverage

* Retest hound

* Add prettier-eslint

* Format with prettier-eslint

* Exclude files src/*.js from coverage

* Add jsxstyle

* Create landing page

* Swap out jsxstyle with glamor

* Hide coverage in vscode

* Show signed in user in global menu

* Fix tests

* Make currentUser query cachable

* Add flow

* Add badges

* Remove prop-types in favor of flow

* Write a real readme

* Move scenes to scenes

* Document directory structure

* Sign up/in modal

* Add password strength indicator

* Improve on validations

* Remove GraphQL to REST code

* Switch to sign in button

* Tweak login form and Dropdowns

* Switch to styled-components

* Move style imports to theme

* Reorganize routes

* Fix lint issues

* Fix tests

* Fix flow checks

* Fix hound eslint config

* Hound test

* Expand .eslintignore

* Update flowtypes

* Write more tests

* Write SignInForm test

* Complete component test coverage

* Update to node 8

* Upgrade dependencies

* Update deps

* Write rest of tests

* Fix lint issues

* Try to fix eslintignore

* Fix validations

* Fix tests

* Add transition to header

* Fix unreachable backend loop bug

* Revert batching middleware

* Obey @eugenk

* Update dependencies


--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,5 @@
 {
-  "root": true,
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
-  },
-  "extends": "eslint:recommended",
-  "env": {
-    "browser": true,
-    "mocha": true
-  },
-  "globals": {
-    "andThen": true,
-    "Application": true,
-    "click": true,
-    "currentPath": true,
-    "currentRoutePath": true,
-    "currentURL": true,
-    "fillIn": true,
-    "find": true,
-    "keyEvent": true,
-    "server": true,
-    "triggerEvent": true,
-    "visit": true
-  },
+  "extends": ["eslint:recommended", "react-app"],
   "rules": {
     "arrow-body-style": ["error"],
     "arrow-parens": ["warn", "always"],
@@ -32,14 +9,13 @@
     "indent": ["error", 2, { "VariableDeclarator": { "var": 2, "let": 2, "const": 3 } }],
     "linebreak-style": ["error", "unix"],
     "max-len": ["warn", 80],
-    "no-confusing-arrow": ["warn"],
+    "no-confusing-arrow": ["warn", {"allowParens": true}],
     "no-const-assign": ["error"],
     "no-eval": ["error"],
     "no-mixed-spaces-and-tabs": ["error"],
     "no-trailing-spaces": ["error"],
     "no-var": ["error"],
     "object-curly-spacing": ["error", "always"],
-    "one-var": ["error", "always"],
     "prefer-arrow-callback": ["warn", { "allowNamedFunctions": true }],
     "prefer-rest-params": ["error"],
     "semi": ["warn", "never"],
