--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 
 node_js:
   - "6"
-  - "7"
+  - "8"
 
 cache:
   directories:
@@ -15,11 +15,10 @@ before_install:
 
 install:
   - "yarn install --pure-lockfile --no-emoji"
-  - "yarn run bower install"
 
 script:
-  - "yarn test"
+  - "yarn flow"
+  - "yarn test -- --coverage --verbose"
 
 after_script:
-  - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
-  - "cat coverage/lcov.info | node_modules/codeclimate-test-reporter/bin/codeclimate.js"
+  - "yarn run codecov"
