--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-# compiled output
-/dist
-/tmp
-
 # dependencies
 /node_modules
 
+# testing
+/.chrome
+/coverage
+
+# production
+/build
+
 # misc
-/.sass-cache
-/connect.lock
-/coverage/*
-/libpeerconnection.log
-npm-debug.log
-testem.log
-.vscode
-testem.local.js
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
