Put backend version option in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ontohub-frontend",
   "version": "0.1.0",
+  "ontohub": {
+    "backendVersion": "> 0.0.0-90"
+  },
   "private": true,
   "license": "AGPL-3.0",
   "dependencies": {
