Add recaptcha package.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3001
 
+REACT_APP_GRECAPTCHA_SITE_KEY="6LewQh8UAAAAAMok-W-6CiQN5buROVD3uRaaKJWU"
 REACT_APP_BACKEND_HOST="http://localhost:3000"
