--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lodash": "^4.17.4",
     "react": "^15.6.0",
     "react-apollo": "^1.2.0",
+    "react-async-script": "^0.9.1",
     "react-css-transition-replace": "^2.2.1",
     "react-dom": "^15.6.0",
+    "react-google-recaptcha": "^0.9.6",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.1.1",
     "semantic-ui-css": "^2.2.10",
