--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/*.js",
+      "!src/**/__stories__/*.js",
       "!src/**/components/index.js",
       "!src/**/scenes/index.js",
       "!src/**/containers/*.js",
