--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "lodash": "^4.17.4",
-    "react": "^15.6.0",
-    "react-apollo": "^1.4.15",
+    "react": "^16.0.0",
+    "react-apollo": "^1.4.16",
     "react-async-script": "^0.9.1",
     "react-css-transition-replace": "^3.0.0",
-    "react-dom": "^15.6.0",
+    "react-dom": "^16.0.0",
     "react-google-recaptcha": "^0.9.7",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.2.2",
@@ -23,16 +23,17 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@storybook/addon-info": "^3.2.10",
-    "@storybook/react": "^3.2.10",
+    "@storybook/addon-info": "^3.2.11",
+    "@storybook/react": "^3.2.11",
     "codecov": "^2.2.0",
-    "enzyme": "^2.8.2",
-    "enzyme-to-json": "^2.0.1",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
     "eslint": "^4.7.2",
     "flow-bin": "^0.49.1",
     "flow-typed": "^2.1.2",
     "prettier-eslint-cli": "^4.0.3",
-    "react-scripts": "1.0.13",
+    "react-scripts": "1.0.14",
     "react-test-renderer": "^16.0.0",
     "serve": "^6.1.0"
   },
