--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 // Recommended Plugins:
 // - ESLint
-// - Prettier - ESLint
+// - Prettier
 // - Debugger for Chrome
 // - Auto Close Tag
-// - Flow Language Support
 {
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
@@ -19,10 +18,6 @@
     "**/.chrome": true,
     "**/coverage": true
   },
-  "javascript.validate.enable": false,
-  "flow.useNPMPackagedFlow": true,
   "eslint.enable": true,
-  "prettier.singleQuote": true,
-  "prettier.tabWidth": 2,
-  "prettier.semi": false
+  "prettier.tabWidth": 2
 }
