--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-link-batch-http": "^1.0.3",
     "apollo-link-error": "^1.0.2",
     "graphql-tag": "^2.6.0",
+    "formik": "^0.9.4",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
