--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "apollo-client": "^2.1.0",
     "apollo-link-batch-http": "^1.0.3",
     "apollo-link-error": "^1.0.2",
-    "graphql-tag": "^2.6.0",
+    "debounce-promise": "^3.0.2",
     "formik": "^0.9.4",
+    "graphql-tag": "^2.6.0",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
