--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "apollo-client": "^2.1.0",
     "apollo-link-batch-http": "^1.0.2",
     "apollo-link-error": "^1.0.2",
+    "babel-plugin-emotion": "^8.0.11",
+    "emotion": "^8.0.11",
+    "emotion-theming": "^8.0.11",
     "graphql-tag": "^2.5.0",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
@@ -18,13 +21,13 @@
     "react-async-script": "^0.9.1",
     "react-css-transition-replace": "^3.0.2",
     "react-dom": "^16.2.0",
+    "react-emotion": "^8.0.11",
     "react-google-recaptcha": "^0.9.9",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.2.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.0",
     "semver": "^5.4.1",
-    "styled-components": "^2.2.3",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
@@ -36,14 +39,15 @@
     "enzyme-to-json": "^3.2.2",
     "eslint": "^4.12.1",
     "prettier": "1.8.2",
+    "react-app-rewired": "^1.3.5",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.2.0",
     "serve": "^6.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "format": "prettier --write \"src/**/*.js\"",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
