--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "apollo-client": "^2.0.3",
     "apollo-link-batch-http": "^1.0.1",
     "apollo-link-error": "^1.0.1",
-    "babel-plugin-emotion": "^8.0.11",
     "emotion": "^8.0.11",
     "emotion-theming": "^8.0.11",
     "graphql-tag": "^2.5.0",
@@ -39,18 +38,17 @@
     "enzyme-to-json": "^3.2.2",
     "eslint": "^4.12.0",
     "prettier": "1.8.2",
-    "react-app-rewired": "^1.3.5",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.2.0",
     "serve": "^6.4.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "format": "prettier --write \"src/**/*.js\"",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public,node_modules/semantic-ui-css",
+    "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "serve-built": "serve build -p $PORT"
   },
