--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "eslint": "^4.12.1",
+    "jest-glamor-react": "^3.2.2",
     "prettier": "1.8.2",
     "react-app-rewired": "^1.3.5",
     "react-scripts": "1.0.17",
@@ -67,6 +68,8 @@
     ]
   },
   "babel": {
-    "plugins": ["emotion"]
+    "plugins": [
+      "emotion"
+    ]
   }
 }
