Refactor formik form and add some tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
     "**/coverage": true
   },
   "eslint.enable": true,
-  "prettier.tabWidth": 2
+  "prettier.tabWidth": 2,
+  "prettier.proseWrap": true
 }
