--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-google-recaptcha": "^0.9.9",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.26.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.1",
     "semver": "^5.4.1",
@@ -30,6 +31,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.2.17",
     "@storybook/addon-info": "^3.2.17",
     "@storybook/react": "^3.2.17",
     "codecov": "^3.0.0",
