--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.3.1",
     "react-google-recaptcha": "^0.11.0",
     "react-gravatar": "^2.6.3",
+    "react-height": "^3.0.0",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.26.0",
     "semantic-ui-css": "^2.3.1",
