--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "eslint": "^4.13.1",
+    "jest-styled-components": "^4.9.0",
     "prettier": "1.9.2",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.2.0",
