--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql-tag": "^2.8.0",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
+    "react-ace": "^5.8.0",
     "react-apollo": "^2.1.2",
     "react-async-script": "^0.9.1",
     "react-css-transition-replace": "^3.0.2",
