98 Create organizational unit scene (#276)
* Change route management

* Create organizational unit scene

* Remove header animation for now

* Organizational unit pages

* Switch to new backend api

* Fix rebase bugs

* Add org settings route

* Improve GraphQL wrapping

* Split OrganizationSettings and make profile settings updatable

* Redirect on non-permission

* Allow org member addition and removal

* Remove version warning container

* Move setServerErrors tests

* Refactoring and tests

* Write some more tests

* Remove Seeds and add eslint globals

* Fix eslint problems

* Remove unnecessary --

* Fix refactoring bug

* Move withVersionQuery

* Update dependencies

* Fix a few bugs

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "private": true,
   "license": "AGPL-3.0",
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.7",
-    "apollo-client": "^2.2.2",
+    "apollo-cache-inmemory": "^1.1.9",
+    "apollo-client": "^2.2.5",
     "apollo-link-batch-http": "^1.0.4",
-    "apollo-link-error": "^1.0.2",
-    "debounce-promise": "^3.0.2",
-    "formik": "^0.11.5",
-    "graphql-tag": "^2.7.0",
+    "apollo-link-error": "^1.0.5",
+    "debounce-promise": "^3.1.0",
+    "formik": "^0.11.10",
+    "graphql-tag": "^2.7.3",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
@@ -31,19 +31,22 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.12",
-    "@storybook/addon-info": "^3.3.12",
-    "@storybook/react": "^3.3.12",
+    "@storybook/addon-actions": "^3.3.13",
+    "@storybook/addon-info": "^3.3.13",
+    "@storybook/react": "^3.3.13",
     "codecov": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "eslint": "^4.17.0",
+    "faker": "^4.1.0",
+    "jest-plugin-set": "^2.6.0",
     "jest-styled-components": "^4.10.0",
     "prettier": "1.10.2",
-    "react-scripts": "1.1.0",
+    "react-scripts": "1.1.1",
     "react-test-renderer": "^16.2.0",
-    "serve": "^6.4.9"
+    "serve": "^6.4.9",
+    "stampit": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
